modify start.sh